--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -273,8 +273,7 @@
                 app:layout_constraintEnd_toEndOf="@id/home_banner"
                 app:layout_constraintTop_toBottomOf="@+id/label_recommend"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-                app:spanCount="2"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 android:layout_marginTop="15dp"
                 tools:listitem="@layout/item_product"/>
             <androidx.constraintlayout.widget.Group
