--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.hjq.shape.layout.ShapeConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root_product"
-    android:layout_width="165dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="10dp"
-    android:layout_marginStart="5dp"
-    android:layout_marginEnd="5dp"
     app:shape_radius="11dp"
-    app:shape_solidColor="@color/FAFAFA"
-    android:paddingBottom="15dp">
+    app:shape_solidColor="@color/white"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp">
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/iv_product"
-        android:layout_width="match_parent"
+        android:layout_width="110dp"
         android:layout_height="0dp"
         android:scaleType="centerCrop"
         android:background="@drawable/test"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintDimensionRatio="h,1:1"
-        app:shapeAppearance="@style/circle11Image"
+        app:shapeAppearance="@style/circle11Image2"
         app:strokeColor="@color/white"
         />
     <TextView
         android:id="@+id/tv_product_title"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/iv_product"
+        app:layout_constraintTop_toTopOf="@id/iv_product"
+        app:layout_constraintStart_toEndOf="@id/iv_product"
+        app:layout_constraintEnd_toEndOf="parent"
         android:textSize="13dp"
         android:textColor="#1A1A1A"
-        app:layout_constraintStart_toStartOf="parent"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -68,11 +68,11 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/tv_product_desc"
         app:layout_constraintBottom_toBottomOf="@id/tv_product_price"
-        app:layout_constraintEnd_toEndOf="@+id/tv_product_desc"
+        app:layout_constraintStart_toEndOf="@+id/tv_product_price02"
         android:textSize="12dp"
         android:textColor="@color/FE9520"
         android:layout_marginTop="10dp"
-        android:layout_marginStart="5dp"
+        android:layout_marginStart="10dp"
         android:text="1万+人购买"
         android:gravity="center"/>
 
