--- a/app/src/main/res/layout/project_fragment.xml
+++ b/app/src/main/res/layout/project_fragment.xml
@@ -6,25 +6,41 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.ProjectFragment"
     android:background="@color/white">
-   <com.hjq.bar.TitleBar
-       android:id="@+id/title_tuijian"
-       android:layout_width="match_parent"
-       android:layout_height="44dp"
-       app:title="推荐"
-       app:titleGravity="start"
-       app:leftIconWidth="0dp"
-       android:background="@color/white"
-       app:layout_constraintTop_toTopOf="parent"
-       android:layout_marginTop="30dp"
-       />
+   <androidx.constraintlayout.widget.Guideline
+       android:id="@+id/project_lineleft"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:orientation="vertical"
+       app:layout_constraintGuide_percent="0.04"/>
+
+   <androidx.constraintlayout.widget.Guideline
+       android:id="@+id/project_lineright"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:orientation="vertical"
+       app:layout_constraintGuide_percent="0.96"/>
+
+<!--   <com.hjq.bar.TitleBar-->
+<!--       android:id="@+id/title_tuijian"-->
+<!--       android:layout_width="match_parent"-->
+<!--       android:layout_height="44dp"-->
+<!--       app:title="推荐"-->
+<!--       app:titleGravity="start"-->
+<!--       app:leftIconWidth="0dp"-->
+<!--       android:background="@color/white"-->
+<!--       app:layout_constraintTop_toTopOf="parent"-->
+<!--       android:layout_marginTop="30dp"-->
+<!--       />-->
 
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/video_list"
-       android:layout_width="match_parent"
+       android:layout_width="0dp"
        android:layout_height="0dp"
-       tools:listitem="@layout/item_video"
-       app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-       app:spanCount="2"
-       app:layout_constraintTop_toBottomOf="@+id/title_tuijian"
-       app:layout_constraintBottom_toBottomOf="parent"/>
+       app:layout_constraintStart_toEndOf="@id/project_lineleft"
+       app:layout_constraintEnd_toStartOf="@id/project_lineright"
+       tools:listitem="@layout/item_product"
+       app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+       android:layout_marginTop="30dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
