--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -90,7 +90,24 @@
         app:layout_constraintStart_toStartOf="@id/tv_product_title"
         app:layout_constraintEnd_toEndOf="@id/tv_product_title"
         app:layout_constraintTop_toBottomOf="@id/tv_product_title"
-        android:layout_marginTop="10dp"
-        />
+        android:layout_marginTop="10dp" />
+    <com.hjq.shape.view.ShapeButton
+        android:id="@+id/btn_goto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="进入"
+        app:shape_radius="22dp"
+        app:shape_solidColor="@color/white"
+        app:shape_shadowSize="1dp"
+        app:shape_shadowColor="@color/FE9520"
+        android:textColor="@color/FE9520"
+        android:textSize="13dp"
+        android:paddingStart="23dp"
+        android:paddingTop="5dp"
+        android:paddingEnd="23dp"
+        android:paddingBottom="5dp"
+        app:layout_constraintTop_toBottomOf="@id/tv_product_desc"
+        app:layout_constraintTop_toTopOf="@id/tv_product_price02"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </com.hjq.shape.layout.ShapeConstraintLayout>
