--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,7 +56,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login_linet"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:src="@drawable/logo"
+        android:src="@drawable/login_logo"
         app:shapeAppearance="@style/circleImage"
         app:strokeColor="@color/white"/>
 
@@ -67,7 +67,7 @@
         app:layout_constraintTop_toBottomOf="@id/iv_head"
         android:layout_marginTop="60dp"
         android:padding="15dp"
-        app:shape_radius="22dp"
+        app:shape_radius="25dp"
         app:shape_solidColor="@color/F5F5F5"
         app:layout_constraintStart_toEndOf="@+id/login_linel01"
         app:layout_constraintEnd_toStartOf="@id/login_liner01">
@@ -103,7 +103,7 @@
         app:layout_constraintTop_toBottomOf="@id/layout_name"
         android:layout_marginTop="20dp"
         android:padding="15dp"
-        app:shape_radius="22dp"
+        app:shape_radius="25dp"
         app:shape_solidColor="@color/F5F5F5"
         app:layout_constraintStart_toEndOf="@+id/login_linel01"
         app:layout_constraintEnd_toStartOf="@id/login_liner01" >
@@ -152,7 +152,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="14dp"
         android:paddingBottom="14dp"
-        app:shape_radius="21.5dp"
+        app:shape_radius="25dp"
         app:shape_solidColor="@color/FFC482"
         android:text="@string/string_login"
         android:textColor="@color/white"
@@ -189,6 +189,7 @@
         app:layout_constraintStart_toEndOf="@+id/login_linel01"
         app:layout_constraintEnd_toStartOf="@id/login_liner01"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="15dp"
         android:orientation="horizontal">
         <com.hjq.shape.view.ShapeCheckBox
             android:id="@+id/login_check"
