--- a/app/src/main/res/layout/recommend_fragment.xml
+++ b/app/src/main/res/layout/recommend_fragment.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.HomeFragment"
+    tools:context=".ui.RecommendFragment"
     android:background="@color/white">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -15,9 +16,9 @@
         android:paddingEnd="15dp"
         android:paddingTop="5.5dp"
         android:paddingBottom="5.5dp"
-        app:layout_constraintTop_toBottomOf="@+id/layout_home"
-        android:background="@color/FE9520"
         android:visibility="gone"
+        app:layout_constraintTop_toTopOf="parent"
+        android:background="@color/FE9520"
         android:focusable="false"
         android:clickable="false">
 
@@ -28,40 +29,11 @@
             android:background="@color/white"
             android:visibility="visible"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_home"
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        app:layout_constraintTop_toTopOf="parent">
-        <com.hjq.bar.TitleBar
-            android:id="@+id/title_home"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:title="欧文时光"
-            app:titleColor="@color/white"
-            android:background="@color/FE9520"
-            android:visibility="visible"
-            android:focusable="false"
-            android:clickable="false"/>
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_home_head"
-            android:layout_width="33dp"
-            android:layout_height="0dp"
-            app:layout_constraintDimensionRatio="h,1:1"
-            android:scaleType="centerCrop"
-            android:src="@drawable/logo"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:shapeAppearance="@style/circleImage"
-            android:layout_marginStart="15dp"
-            app:strokeColor="@color/white"/>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/layout_home"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical"
         android:scrollbars="none">
@@ -101,11 +73,12 @@
                 app:banner_indicator_normal_width="12dp"
                 app:banner_indicator_selected_width="12dp"
                 app:banner_indicator_height="4dp"/>
-            <!--app:layout_constraintDimensionRatio="h,1:0.15"-->
+
             <com.hjq.shape.layout.ShapeConstraintLayout
                 android:id="@+id/layout_notice"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+            app:layout_constraintDimensionRatio="h,1:0.15"
                 app:layout_constraintTop_toBottomOf="@+id/home_banner"
                 app:layout_constraintStart_toStartOf="@+id/home_banner"
                 app:layout_constraintEnd_toEndOf="@id/home_banner"
@@ -120,7 +93,7 @@
                     android:layout_height="45.5dp"
                     android:src="@drawable/logo"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"/>
+                    app:layout_constraintTop_toTopOf="parent"/>
 
                 <com.youth.banner.Banner
                     android:id="@+id/notice_banner"
